refactor: fix issues with sonarLint